Fix group badge misalignment if there is no group icon

--- a/less/admin/EditGroupModal.less
+++ b/less/admin/EditGroupModal.less
@@ -4,7 +4,6 @@
   }
   .Badge {
     margin-right: 5px;
-    vertical-align: 2px;
   }
 }
 .EditGroupModal-name-input {
